fixed screen scrollbar bug

--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -34,6 +34,6 @@
 .screenWrapper {
   grid-area: screen;
   max-width: 100%;
-  overflow: scroll;
+  overflow-x: auto;
   scroll-behavior: smooth;
 }
